fixed bug where output would loop or display nothing but source. Fixed by adding checks to see if the next line from scanner is null